--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
-{% set version="2016.7" %}
+{% set version="2016.10" %}
 
 package:
   name: pytz
   version: {{ version }}
 
 source:
-  fn: pytz-{{ version }}.tar.bz2
-  url: https://pypi.io/packages/source/p/pytz/pytz-{{ version }}.tar.bz2
-  sha256: 6eab31709e3a4aea748457707da45e805b650cbb352583805d2417de2a1dd71e
+  fn: pytz-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/p/pytz/pytz-{{ version }}.tar.gz
+  sha256: 9a43e20aa537cfad8fe7a1715165c91cb4a6935d40947f2d070e4c80f2dcd22b
 
 build:
   number: 0
@@ -28,7 +28,7 @@ about:
   home: http://pythonhosted.org/pytz/
   license: MIT
   license_file: LICENSE.txt
-  summary: World timezone definitions, modern and historical
+  summary: 'World timezone definitions, modern and historical.'
   description: |
     pytz brings the Olson tz database into Python. This library allows
     accurate and cross platform timezone calculations using Python 2.4 or
