--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
-{% set version="2016.10" %}
+{% set version="2017.2" %}
 
 package:
   name: pytz
   version: {{ version }}
 
 source:
-  fn: pytz-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/p/pytz/pytz-{{ version }}.tar.gz
-  sha256: 9a43e20aa537cfad8fe7a1715165c91cb4a6935d40947f2d070e4c80f2dcd22b
+  fn: pytz-{{ version }}.zip
+  url: https://pypi.io/packages/source/p/pytz/pytz-{{ version }}.zip
+  sha256: f5c056e8f62d45ba8215e5cb8f50dfccb198b4b9fbea8500674f3443e4689589
 
 build:
   number: 0
